--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
@@ -4,7 +4,45 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.ChooseProfileType">
-    
-    
-  
+    <Frame>
+        
+        <StackLayout Background="Black">
+
+
+            <Frame BackgroundColor="Transparent" Margin="0,10,9,0">
+
+                <Label Text="Which role"
+                   HorizontalTextAlignment="Center"
+                   FontSize="Title"
+                   TextColor="#5C6898"
+                       FontFamily="Montserrat-Bold.ttf">
+
+                </Label>
+
+            </Frame>
+
+            <Frame BackgroundColor="Transparent" Margin="5,-42,0,0">
+
+                <Label Text=" describes you ?"
+                   HorizontalTextAlignment="Center"
+                   FontSize="Title"
+                   TextColor="#5C6898" >
+
+                </Label>
+
+            </Frame>
+
+
+
+
+
+
+
+
+
+
+        </StackLayout>
+
+    </Frame>
+
 </ContentPage>
