--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/EmergencyLinesPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/EmergencyLinesPage.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SoteriaApp.Views.EmergencyLinesPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+
+        <WebView x:Name="BrowserLink"/>
+
+        <!--<WebView Source="https://www.sadag.org/"/>-->
     </ContentPage.Content>
 </ContentPage>
