--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/RegistrationPage.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:prism="http://prismlibrary.com" xmlns:viewmodels="clr-namespace:SoteriaApp.ViewModels" x:DataType="viewmodels:RegistrationPageViewModel"
+             prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.RegistrationPage">
+
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
@@ -17,33 +20,41 @@
 
                     <StackLayout Grid.Row="0">
                         <Entry Placeholder="UserName" FontSize="16" x:Name="EntryUserName" />
+                        <Label Text="{Binding UserName}" TextColor="Black" HorizontalOptions="Center"/>
                     </StackLayout>
 
                     <StackLayout Grid.Row="1">
                         <Entry Placeholder="FullName" FontSize="16" x:Name="EntryFullName" />
+                        <Label Text="{Binding FullName}" TextColor="Black" HorizontalOptions="Center"/>
 
                     </StackLayout>
                     <StackLayout Grid.Row="2">
                         <Entry Placeholder="Surname" FontSize="16" x:Name="EntrySurname" />
+                        <Label Text="{Binding Surname}" TextColor="Black" HorizontalOptions="Center"/>
+
                     </StackLayout>
                     <StackLayout Grid.Row="3">
                         <Entry Placeholder="Email" FontSize="16" x:Name="EntryEmail" />
+                        <Label Text="{Binding Email}" TextColor="Black" HorizontalOptions="Center"/>
                     </StackLayout>
                     <StackLayout Grid.Row="4">
                         <Entry Placeholder="Password" FontSize="16" x:Name="EntryPassword" />
+                        <Label Text="{Binding Password}" TextColor="Black" HorizontalOptions="Center"/>
                     </StackLayout>
-                    <StackLayout Grid.Row="5 ">
+                   <!-- <StackLayout Grid.Row="5 ">
                         <Entry Placeholder="ConfirmPassword" FontSize="16" x:Name="EntryConfirmPassword" />
-                    </StackLayout>
+                        <Label Text="{Binding ConfirmPassword }" TextColor="Black" HorizontalOptions="Center"/>
+                    </StackLayout>-->
                     <StackLayout Grid.Row="6">
 
-                        <Button Text="Register" HorizontalOptions="CenterAndExpand" WidthRequest="100" TextColor="White" BackgroundColor="DeepSkyBlue" Clicked="Button_Clicked" />
+                        <Button Text="Register" HorizontalOptions="CenterAndExpand" WidthRequest="100" TextColor="White" BackgroundColor="DeepSkyBlue" Clicked="Button_Clicked"/>
                     </StackLayout>
 
                 </Grid>
             </StackLayout>
         </ScrollView>
-        
-        
+
+
     </ContentPage.Content>
+
 </ContentPage>
