--- a/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
+++ b/SoteriaAppSln/SoteriaApp/SoteriaApp/Views/ChooseProfileType.xaml
@@ -4,35 +4,131 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="SoteriaApp.Views.ChooseProfileType">
-    <Frame>
+    <Frame BackgroundColor="Transparent">
         
-        <StackLayout Background="Black">
+        <StackLayout BackgroundColor="Transparent">
 
 
-            <Frame BackgroundColor="Transparent" Margin="0,10,9,0">
+            <Frame BackgroundColor="Transparent" Margin="0,10,1,0">
 
                 <Label Text="Which role"
                    HorizontalTextAlignment="Center"
                    FontSize="Title"
                    TextColor="#5C6898"
-                       FontFamily="Montserrat-Bold.ttf">
+                       FontFamily="Roboto-Bold.ttf">
 
                 </Label>
 
             </Frame>
 
-            <Frame BackgroundColor="Transparent" Margin="5,-42,0,0">
+            <Frame BackgroundColor="Transparent" Margin="0,-42,0,0">
 
                 <Label Text=" describes you ?"
                    HorizontalTextAlignment="Center"
                    FontSize="Title"
-                   TextColor="#5C6898" >
+                   TextColor="#5C6898"
+                   FontFamily="Roboto-Bold.ttf">
 
                 </Label>
 
             </Frame>
 
+           
+            <Grid BackgroundColor="Transparent">
 
+                <Frame BackgroundColor="Transparent" >
+
+                    <ImageButton Source="Educator" 
+                                 HeightRequest="80"
+                                 WidthRequest="80"
+                                 CornerRadius="360"
+                                 VerticalOptions="CenterAndExpand"
+                                 HorizontalOptions="StartAndExpand"
+                                 BackgroundColor="#A9DFE2"
+                                 Padding="-6,-6,-6,-6"
+                                 Margin="-19,120,0,0"
+                                 >
+                        
+                        
+                        
+                    </ImageButton>
+                    
+                </Frame>
+
+                <Label Text=" Educator " 
+                       Margin="5,290,0,0"
+                       FontFamily="Roboto-Regular.ttf"
+                       HorizontalOptions="StartAndExpand"
+                       FontSize="Subtitle"
+                       TextColor="#5C6898">
+                    
+                    
+                </Label>
+
+                <ImageButton Source="Family" 
+                                 HeightRequest="80"
+                                 WidthRequest="80"
+                                 CornerRadius="360"
+                                 VerticalOptions="CenterAndExpand"
+                                 HorizontalOptions="Center"         
+                                 BackgroundColor="#FDB3CA"
+                                 Padding="-6,-6,-6,0"
+                                 Margin="-21,120,-25,0"
+                                 >
+
+                </ImageButton>
+
+                <Label Text=" Parent / " 
+                       Margin="-10,290,-18.5,0"
+                       FontFamily="Roboto-Regular.ttf"
+                       HorizontalOptions="CenterAndExpand"
+                       FontSize="Subtitle"
+                       TextColor="#5C6898"
+                       >
+
+
+                </Label>
+
+                <Label Text=" Gaurdian"
+                       TextColor="#5C6898"
+                       Margin="-20,305,-28.5,0"
+                       FontFamily="Roboto-Regular.ttf"
+                       HorizontalOptions="CenterAndExpand"
+                       FontSize="Subtitle"
+                       Padding="0,10,10,0">
+                    
+                    
+                </Label>
+
+                <ImageButton Source="Guest" 
+                                 HeightRequest="80"
+                                 WidthRequest="80"
+                                 CornerRadius="360"
+                                 VerticalOptions="CenterAndExpand"
+                                 HorizontalOptions="End"         
+                                 BackgroundColor="#D1D5FA"
+                                 Padding="-6,-6,0,-6"
+                                 Margin="0,120,2,0"
+                                 >
+
+                </ImageButton>
+
+                <Label Text=" Guest " 
+                       Margin="0,290,-267,0"
+                       FontFamily="Roboto-Regular.ttf"
+                       HorizontalOptions="CenterAndExpand"
+                       FontSize="Subtitle"
+                       TextColor="#5C6898"
+                       >
+
+
+                </Label>
+
+
+
+
+
+            </Grid>
 
 
 
